--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,15 @@
 {
+  "name": "my-server",
+  "version": "1.0.0",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "nodemailer": "^7.0.5",
     "stripe": "^18.4.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
