--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "nodemailer": "^7.0.5",
+    "nodemon": "^3.1.10",
     "stripe": "^18.4.0"
   },
   "scripts": {
